# reup_video

./: .gitignore  README.md  config.example.json  pyproject.toml
video_translator/: __init__.py  cli.py  extract.py  models.py  pipeline.py  render.py  translate.py  tts.py  utils.py
video_translator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
