[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "video-translator"
version = "0.1.0"
description = "Hybrid video translation pipeline"
requires-python = ">=3.10"
dependencies = [
  "faster-whisper>=1.1.0",
]

[project.scripts]
video-translator = "video_translator.cli:main"

[tool.setuptools]
packages = ["video_translator"]
